--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ env:
 
 jobs:
   check_and_prepare:
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted ]
     outputs:
       unity_version: ${{ steps.set_outputs.outputs.unity_version }}
       include_test_types: ${{ steps.set_outputs.outputs.include_test_types }}
